white link footer

--- a/templates/registrazione_edifici.html
+++ b/templates/registrazione_edifici.html
@@ -590,10 +590,10 @@ function recoverapi(lat,lon) {
     </div>
 </footer>
 <div class="footer-bottom text-center" style="background-color: #013975; height: 55px;">
-    <a href="https://www.iubenda.com/privacy-policy/98489026/full-legal">Privacy policy</a> | 
-    <a href="https://www.iubenda.com/privacy-policy/98489026/cookie-policy">Cookie policy</a> | 
-    <a href="https://www.infratelitalia.it/social-media-policy">Social media policy</a> | 
-    <a href="https://www.sinfi.it/portal/consultazione-dati/i-servizi-del-sinfi/note-legali/">Note legali</a>
+    <a href="https://www.iubenda.com/privacy-policy/98489026/full-legal" style="color: white;">Privacy policy</a> | 
+    <a href="https://www.iubenda.com/privacy-policy/98489026/cookie-policy" style="color: white;">Cookie policy</a> | 
+    <a href="https://www.infratelitalia.it/social-media-policy" style="color: white;">Social media policy</a> | 
+    <a href="https://www.sinfi.it/portal/consultazione-dati/i-servizi-del-sinfi/note-legali/" style="color: white;">Note legali</a>
 </div>
 </body>
 </html>
